Added a listbox for displaying and setting the ZK theme.
This was to debug trouble that happened when another ZK-based application set a theme on the browser session that isn't available to this one.

--- a/test-war/src/main/webapp/index.zul
+++ b/test-war/src/main/webapp/index.zul
@@ -6,6 +6,7 @@
         <button id="button1" label="One"/>
         <button id="button2" label="Two"/>
       </hlayout>
+      <listbox id="themeListbox" mold="select" apply="au.id.raboczi.cornerstone.test_war.ThemeListboxController"/>
     </vlayout>
   </window>
 </zk>
