Factored test-service-zk out of test-war.
This demonstrates how ZK macros can be packaged into library bundles.

--- a/test-service-zk/src/main/resources/au/id/raboczi/cornerstone/test_service/zk/test.zul
+++ b/test-service-zk/src/main/resources/au/id/raboczi/cornerstone/test_service/zk/test.zul
@@ -1,5 +1,5 @@
 <zk>
-  <box apply="au.id.raboczi.cornerstone.test_war.TestController">
+  <box apply="au.id.raboczi.cornerstone.test_service.zk.TestController">
     <hlayout>
       <label value="${arg.label}"/>
       <label id="label" value="Page default"/>
