Build works under JDK11 now (just need to set java.source.version properties in top-level pom.xml)
Fixed localization of "Cancel" button in login.zul

--- a/test-war/src/main/webapp/index.zul
+++ b/test-war/src/main/webapp/index.zul
@@ -4,7 +4,7 @@
   <window>
     <vlayout>
       <user/>
-      <test label="${labels.test_label}"/>
+      <test label="${labels.index_label}"/>
       <listbox id="themeListbox" mold="select" apply="au.id.raboczi.cornerstone.test_war.ThemeListboxController"/>
     </vlayout>
   </window>
