--- a/presentation-layer-zk/test-war/src/main/webapp/index.zul
+++ b/presentation-layer-zk/test-war/src/main/webapp/index.zul
@@ -2,8 +2,10 @@
 <?component name="rxtest" macroURI="au/id/raboczi/cornerstone/test_service/zk/rxtest.zul"?>
 <?component name="user" macroURI="au/id/raboczi/cornerstone/user_service/zk/user.zul"?>
 <zk>
+  <style src="style.css"/>
   <window>
     <vlayout>
+      <menubar id="menubar" apply="au.id.raboczi.cornerstone.test_war.MenubarController"/>
       <user/>
       <test label="${labels.index_test_label}"/>
       <listbox id="themeListbox" mold="select" apply="au.id.raboczi.cornerstone.test_war.ThemeListboxController"/>
