Progress with useradmin, now able to create and delete users and groups.

--- a/zk/useradmin-zk/src/main/resources/au/id/raboczi/cornerstone/useradmin/zk/manageUsers.zul
+++ b/zk/useradmin-zk/src/main/resources/au/id/raboczi/cornerstone/useradmin/zk/manageUsers.zul
@@ -1,17 +1,22 @@
 <window id="win" width="450px" closable="true" position="center" title="${win$composer.labels.manage_users_title}"
         apply="au.id.raboczi.cornerstone.useradmin.zk.ManageUsersController">
-  <listbox id="roleListbox">
-    <listhead>
-      <listheader label="Name"/>
-      <listheader label="Type"/>
-    </listhead>
-    <template name="model">
-      <listitem>
-        <listcell label="${each.name}"/>
-        <listcell label="${each.type}"/>
-      </listitem>
-    </template>
-  </listbox>
+  <hlayout>
+    <listbox id="roleListbox">
+      <listhead>
+        <listheader label="Name"/>
+        <listheader label="Type"/>
+      </listhead>
+      <template name="model">
+        <listitem>
+          <listcell label="${each.name}"/>
+          <listcell label="${each.type}"/>
+        </listitem>
+      </template>
+    </listbox>
+    <zk id="detail"/>
+  </hlayout>
   <button id="createUserButton" label="${win$composer.labels.manage_users_createUserButton_label}"/>
+  <button id="createGroupButton" label="${win$composer.labels.manage_users_createGroupButton_label}"/>
+  <button id="deleteButton" label="${win$composer.labels.manage_users_deleteButton_label}"/>
   <button id="cancelButton" label="${labels._cancel}"/>
 </window>
