JAASUseradmin now sends events to notify of changes (but not UserAdminListener callbacks).
Removed some spammy log messages from ManageUsersMenuitemService and UploadMenuitemService.
Holding down the meta key while opening the "Manage users" menu item now attempts to open in a new tab (not yet implemented).

--- a/zk/useradmin-zk/src/main/resources/au/id/raboczi/cornerstone/useradmin/zk/manageUsers.zul
+++ b/zk/useradmin-zk/src/main/resources/au/id/raboczi/cornerstone/useradmin/zk/manageUsers.zul
@@ -13,7 +13,7 @@
         </listitem>
       </template>
     </listbox>
-    <zk id="detail"/>
+    <box id="detail"/>
   </hlayout>
   <button id="createUserButton" label="${win$composer.labels.manage_users_createUserButton_label}"/>
   <button id="createGroupButton" label="${win$composer.labels.manage_users_createGroupButton_label}"/>
