--- a/zk/zk-main-war/src/main/webapp/index.zul
+++ b/zk/zk-main-war/src/main/webapp/index.zul
@@ -1,5 +1,6 @@
 <?component name="dmimage" macroURI="dmimage.zul"?>
 <?component name="test" macroURI="au/id/raboczi/cornerstone/test_service/zk/test.zul"?>
+<?link rel="icon" href="icon.jpg" type="image/jpeg"?>
 <zk>
   <style src="style.css"/>
   <window>
