Further progress making manageUsers.zul open properly both as a modal window and as a standalone browser window/tab.

--- a/zk/useradmin-zk/src/main/resources/au/id/raboczi/cornerstone/useradmin/zk/manageUsers.zul
+++ b/zk/useradmin-zk/src/main/resources/au/id/raboczi/cornerstone/useradmin/zk/manageUsers.zul
@@ -1,4 +1,4 @@
-<?component name="dmimage" macroURI="dmimage.zul"?>
+<?link rel="stylesheet" type="text/css" href="/style.css"?>
 <window id="win" width="600px" closable="true" position="center" title="${win$composer.labels.manage_users_title}"
         apply="au.id.raboczi.cornerstone.useradmin.zk.ManageUsersController">
   <hlayout hflex="min">
@@ -14,7 +14,7 @@
         </listitem>
       </template>
     </listbox>
-    <image src="au/id/raboczi/cornerstone/useradmin/zk/user.svg" style="height: 200px"/>
+    <image src="/au/id/raboczi/cornerstone/useradmin/zk/user.svg" style="height: 150px"/>
   </hlayout>
   <hlayout>
     <button id="createUserButton" label="${win$composer.labels.manage_users_createUserButton_label}"/>
