--- a/zk/zk-main-war/src/main/webapp/style.css
+++ b/zk/zk-main-war/src/main/webapp/style.css
@@ -1,32 +1,9 @@
-/* ZK 8.5 icons */
-@font-face{
-  font-family: 'ZK85Icons';
-  src:         url('ZK85Icons.eot?v=4.7.0');
-  src:         url('ZK85Icons.eot?#iefix&v=4.7.0')    format('embedded-opentype'),
-               url('ZK85Icons.woff?v=4.7.0')          format('woff'),
-               url('ZK85Icons.ttf?v=4.7.0')           format('truetype'),
-               url('ZK85Icons.svg?v=4.7.0#ZK85Icons') format('svg');
-  font-weight: normal;
-  font-style:  normal
-}
-[class^="z-icon-"], [class*=" z-icon-"] {
-  display: inline-block;
-  font-family: ZK85Icons,FontAwesome;
-  font-style: normal;
-  font-weight: normal;
-  font-size: inherit;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-rendering: auto;
-}
-.z-icon-caret-down:before  { content: "\f0d7"; }
-.z-icon-caret-up:before    { content: "\f0d8"; }
-.z-icon-caret-left:before  { content: "\f0d9"; }
-.z-icon-caret-right:before { content: "\f0da"; }
-
-/* ZK theme, light palette (Iceblue) */
 :root {
   color-scheme: light dark;
+}
+
+/* ZK theme, light palette (Iceblue) */
+body {
   --text-color-default:      rgba(0, 0, 0, 0.9);
   --text-color-light:        rgba(0, 0, 0, 0.68);
   --text-color-lighter:      rgba(0, 0, 0, 0.24);
